delete lombok library because no longer support in java9, we add support for java9